apps/paperless/manifests/gotenberg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: paperless
  labels:
    app: gotenberg
spec:
  type: ClusterIP
  selector:
    app: gotenberg
  ports:
    - name: gotenberg
      port: 3000
      targetPort: gotenberg
      protocol: TCP
