apps/paperless/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless
    app.kubernetes.io/name: paperless
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
