apps/paperless/manifests/tika-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: paperless
  labels:
    app: tika
spec:
  type: ClusterIP
  selector:
    app: tika
  ports:
    - name: tika
      port: 9998
      targetPort: tika
      protocol: TCP
